--- a/css/styles.css
+++ b/css/styles.css
@@ -9,8 +9,10 @@
   --light-bg: #F4F4FD;
   --white-cl: white;
   --acent-cl: #E7E9FC;
+  --light-slate: #8E8F99;
   /* transition */
-  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --transition-duration: 250ms;
+  --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -149,8 +151,11 @@ body {
   color: var(--headings-cl);
   padding: 24px 0;
   position: relative;
-  transition: color var(--transition);
-}
+  transition-property: color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-timing-function);
+  }
+
 
 .header-link:hover,
 .header-link:focus,
@@ -178,8 +183,10 @@ body {
 .header-address.link {
   color: var(--text-cl);
   letter-spacing: 0.02em;
-  transition: color var(--transition);
-}
+  transition-property: color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-timing-function);
+  }
 
 .main {}
 
@@ -228,8 +235,10 @@ body {
   margin: 0 auto;
   border: none;
   border-radius: 4px;
-  transition: background-color var(--transition);
-}
+  transition-property: background-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-timing-function);
+  }
 
 .hero-btn:hover,
 .hero-btn:focus {
@@ -273,6 +282,18 @@ body {
 
 .features-text {}
 
+.icon-background {
+  height: 112px;
+  border-radius: 4px;
+  background-color: var(--light-bg);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.features-icon {
+}
+
 /**
   |============================
   | What are we doing section
@@ -293,7 +314,7 @@ body {
 
 
 .section-product-title,
-.section-team-title {
+.section-team-title, .customers-title {
   line-height: 1.11;
   font-size: 36px;
   color: var(--headings-cl);
@@ -330,6 +351,7 @@ body {
 .team-list-item {
   background-color: var(--white-cl);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-card-content {
@@ -340,6 +362,90 @@ body {
 
 .team-name-job {
   font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.team-socials-list {
+  display: flex;
+  gap:24px;
+  align-items: center;
+}
+
+.team-socials-list-item {
+width: calc((100% - 3 * 24px) / 4);
+height: 40px;
+}
+
+.team-social-link {
+display: inline-block;
+  width: 100%;
+height: 100%;
+  border-radius: 50%;
+background-color: var(--CTA-iris);
+transition-property: background-color;
+transition-duration: var(--transition-duration);
+transition-timing-function: var(--transition-timing-function);
+}
+
+.team-social-link:hover, .team-social-link:focus {
+  background-color: var(--CTA-ocean);
+}
+
+.team-social-icon {
+  margin: 12px;
+}
+
+/**
+  |============================
+  | Customers styles
+  |============================
+*/
+
+.customers-section {
+  background-color: var(--white-cl);
+  padding: 120px 0;
+}
+
+.customers-title {
+}
+
+.customers-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.customers-list-item {
+}
+
+.customers-link {
+border-radius: 4px;
+  border: 1px solid var(--lightslate, var(--light-slate));
+  height: 88px;
+  width: 168px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-property: border-color;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-timing-function);
+  }
+
+
+.customers-icon {
+  fill: var(--light-slate);
+  transition-property: fill;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+}
+
+.customers-link:hover, .customers-link:focus {
+  border-color: var(--CTA-ocean);
+}
+
+.customers-link:hover .customers-icon, .customers-link:focus .customers-icon {
+  fill: var(--CTA-ocean);
 }
 
 /**
