--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
   --white-cl: white;
   --acent-cl: #E7E9FC;
   --light-slate: #8E8F99;
+  --green-success-cl: #31D0AA;
+  --modal-bg: #FCFCFC;
   /* transition */
   --transition-duration: 250ms;
   --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -203,7 +205,7 @@ body {
   padding-top: 188px;
   padding-bottom: 188px;
   background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero_bgd-img/background_image.jpg);
-  background-repeat: no repeat;
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   max-width: 1440px;
@@ -393,6 +395,7 @@ transition-timing-function: var(--transition-timing-function);
 
 .team-social-icon {
   margin: 12px;
+  fill: var(--light-bg);
 }
 
 /**
@@ -471,7 +474,9 @@ border-radius: 4px;
   padding: 12px 24px;
   border: 1px solid var(--acent-cl);
   border-radius: 4px;
-  transition: background-color var(--transition), color var(--transition), border var(--transition);
+  transition-property: background-color, color, border, box-shadow;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
 }
 
 .portfolio-btn:hover,
@@ -479,6 +484,7 @@ border-radius: 4px;
   background-color: var(--CTA-ocean);
   color: var(--white-cl);
   border: 1px solid transparent;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
 .portfolio-subtitle {
@@ -507,12 +513,46 @@ border-radius: 4px;
   width: calc((100% - 2*24) / 3);
 }
 
+.portfolio-examples-list-item:hover, .portfolio-examples-list-item:focus {
+box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+
 .portfolio-examples-text {}
 
 .card-content {
   padding: 32px 16px;
   border: 1px solid var(--acent-cl);
   border-top: none;
+}
+
+.overlay-wrapper {
+  overflow: hidden;
+  width: 360px;
+  height: 300px;
+  position: relative;
+}
+
+.overlay-text {
+  color: var(--light-bg);
+  font-size: 16px;
+  background-color: var(--CTA-iris);
+  padding: 40px 32px 164px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  transition-property: transform;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+}
+
+.portfolio-examples-list-item:hover .overlay-text, .portfolio-examples-list-item:focus .overlay-text {
+  transform: translateY(0%);
 }
 
 /**
@@ -534,9 +574,127 @@ border-radius: 4px;
 
 footer .header-logo {
   display: inline-block;
+  padding: 0;
   margin-bottom: 16px;
 }
 
 .footer-logo-light {
   color: var(--light-bg);
+}
+
+.footer-socials-subtitle {
+  color: var(--white-cl);
+  font-weight: 500;
+  font-size: 16px;
+  margin-bottom: 16px;
+}
+
+.footer .container {
+  display: flex;
+  align-items: baseline;
+  gap: 120px;
+  padding: 0;
+}
+
+.logo-text {}
+
+.footer-socials {}
+
+.footer-links-list {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.footer-links-item {}
+
+.footer-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: var(--CTA-iris);
+  border-radius: 50%;
+  transition-property: background-color;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+}
+
+.footer-link:hover, .footer-link:focus {
+  background-color: var(--green-success-cl);
+}
+
+.footer-icon {
+  fill: var(--light-bg);
+}
+
+/**
+  |============================
+  | Modal styles
+  |============================
+*/
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(46, 47, 66, 0.40);
+}
+
+.backdrop.is-hidden{
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
+}
+
+.modal {
+  width: 408px;
+  height: 584px;
+  border-radius: 4px;
+  background-color: var(--modal-bg);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translateX(-50%) translateY(-50%);
+}
+
+.modal-icon {
+  fill: var(--headings-cl);
+  transition-property: fill;
+    transition-duration: var(--transition-duration);
+    transition-timing-function: var(--transition-timing-function);
+}
+
+.modal-btn {
+  background-color: var(--acent-cl);
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.10);
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  transition-property: background-color, border;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: var(--transition-timing-function);
+}
+
+.modal-btn:hover, .modal-btn:focus {
+  background-color: var(--CTA-ocean);
+  border: none;
+}
+
+.modal-btn:hover .modal-icon,
+.modal-btn:focus .modal-icon {
+  fill: var(--white-cl);
 }
